# CV_Training

./: CMakeLists.txt  LICENSE  README.md  image.cpp  main.cpp  video.cpp
include/: image.hpp  video.hpp
src/: image.cpp  video.cpp
